Localization for MJ trade goods

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -747,6 +747,104 @@
  glp_save_edit_events.EVTBATA39:0 "Remove Sailor buildings"
  glp_save_edit_events.EVTBATZZ1:0 "Nevermind"
 
+ glp_2024_events.EVTNAME20:0 "Changing trade goods"
+ glp_2024_events.EVTDESC20:0 "By your presence you may enforce the rule of the universe and change what is produced in the province of [From.GetName].\n\n§YChoose what trade good you want to produce in [From.GetName]§!"
+ glp_2024_events.EVTOPTA20:0 "Nevermind"
+ glp_2024_events.EVTOPTB20:0 "Change to Grain"
+ glp_2024_events.EVTOPTC20:0 "Change to wine"
+ glp_2024_events.EVTOPTD20:0 "Change to Wool"
+ glp_2024_events.EVTOPTE20:0 "Change to Cloth"
+ glp_2024_events.EVTOPTF20:0 "Change to Fish"
+ glp_2024_events.EVTOPTG20:0 "Change to Fur"
+ glp_2024_events.EVTOPTH20:0 "Change to Salt"
+ glp_2024_events.EVTOPTI20:0 "Change to Naval Supplies"
+ glp_2024_events.EVTOPTJ20:0 "Change to Copper"
+ glp_2024_events.EVTOPTK20:0 "Change to Gold"
+ glp_2024_events.EVTOPTL20:0 "Change to Iron"
+ glp_2024_events.EVTOPTM20:0 "Change to Slaves"
+ glp_2024_events.EVTOPTN20:0 "Change to Ivory"
+ glp_2024_events.EVTOPTO20:0 "Change to Tea"
+ glp_2024_events.EVTOPTP20:0 "Change to Chinaware"
+ glp_2024_events.EVTOPTQ20:0 "Change to Spices"
+ glp_2024_events.EVTOPTR20:0 "Change to Coffee"
+ glp_2024_events.EVTOPTS20:0 "Change to Cotton"
+ glp_2024_events.EVTOPTT20:0 "Change to Sugar"
+ glp_2024_events.EVTOPTU20:0 "Change to Tobacco"
+ glp_2024_events.EVTOPTW20:0 "Change to Cocoa"
+ glp_2024_events.EVTOPTX20:0 "Change to Silk"
+ glp_2024_events.EVTOPTY20:0 "Change to Dyes"
+ glp_2024_events.EVTOPTZ20:0 "Change to Tropical Wood"
+ glp_2024_events.EVTOPTAA20:0 "Change to Livestock"
+ glp_2024_events.EVTOPTAB20:0 "Change to Incence"
+ glp_2024_events.EVTOPTAC20:0 "Change to Glass"
+ glp_2024_events.EVTOPTAD20:0 "Change to Paper"
+ glp_2024_events.EVTOPTAE20:0 "Change to Gems"
+ glp_2024_events.EVTOPTAF20:0 "Change to Coal"
+ glp_2024_events.EVTOPTAG20:0 "Change to Cloves"
+ glp_2024_events.EVTOPTAH20:0 "Change to Beer"
+ glp_2024_events.EVTOPTAI20:0 "Change to Apiculture"
+ glp_2024_events.EVTOPTAJ20:0 "Change to Whaling"
+ glp_2024_events.EVTOPTAK20:0 "Change to Lumber"
+ glp_2024_events.EVTOPTAL20:0 "Change to Palm Oil"
+ glp_2024_events.EVTOPTAM20:0 "Change to Cinnamon"
+ glp_2024_events.EVTOPTAN20:0 "Change to Saffron"
+ glp_2024_events.EVTOPTAO20:0 "Change to Rice"
+ glp_2024_events.EVTOPTAP20:0 "Change to Opium"
+ glp_2024_events.EVTOPTAQ20:0 "Change to Rum"
+ glp_2024_events.EVTOPTAR20:0 "Change to Horses"
+ glp_2024_events.EVTOPTAS20:0 "Change to Olive Oil"
+ glp_2024_events.EVTOPTAT20:0 "Change to Amber"
+ glp_2024_events.EVTOPTAU20:0 "Change to Jade"
+ glp_2024_events.EVTOPTAV20:0 "Change to Marble"
+ glp_2024_events.EVTOPTAW20:0 "Change to Lead"
+ glp_2024_events.EVTOPTAX20:0 "Change to Mercury"
+ glp_2024_events.EVTOPTAY20:0 "Change to Camel"
+ glp_2024_events.EVTOPTAZ20:0 "Change to Gunpowder"
+ glp_2024_events.EVTOPTBA20:0 "Change to Elephants"
+ glp_2024_events.EVTOPTBB20:0 "Change to Tin"
+ glp_2024_events.EVTOPTBC20:0 "Change to Dates"
+ glp_2024_events.EVTOPTBD20:0 "Change to Chesse"
+ glp_2024_events.EVTOPTBE20:0 "Change to Citrus"
+ glp_2024_events.EVTOPTBF20:0 "Change to Seafood"
+ glp_2024_events.EVTOPTBG20:0 "Change to Carpet"
+ glp_2024_events.EVTOPTBH20:0 "Change to Nutmeg"
+ glp_2024_events.EVTOPTBI20:0 "Change to Maize"
+ glp_2024_events.EVTOPTBJ20:0 "Change to Pearls"
+ glp_2024_events.EVTOPTBK20:0 "Change to Metalworking"
+ glp_2024_events.EVTOPTBL20:0 "Change to Silver"
+ glp_2024_events.EVTOPTBM20:0 "Change to Exotic Animals"
+ glp_2024_events.EVTOPTBN20:0 "Change to Vanilla"
+ glp_2024_events.EVTOPTBO20:0 "Change to Munitions"
+ glp_2024_events.EVTOPTBP20:0 "Change to Woodworking"
+ glp_2024_events.EVTOPTBQ20:0 "Change to Ebony"
+ glp_2024_events.EVTOPTBR20:0 "Change to Tar"
+ glp_2024_events.EVTOPTBS20:0 "Change to Sulfur"
+ glp_2024_events.EVTOPTBT20:0 "Change to Leather"
+ glp_2024_events.EVTOPTBU20:0 "Change to Jewellery"
+ glp_2024_events.EVTOPTBV20:0 "Change to Maple Syrup"
+ glp_2024_events.EVTOPTBW20:0 "Change to Potato"
+ glp_2024_events.EVTOPTBX20:0 "Change to Steam Engines"
+ glp_2024_events.EVTOPTBY20:0 "Change to Zinc"
+ glp_2024_events.EVTOPTBZ20:0 "Change to Optics"
+ glp_2024_events.EVTOPTCA20:0 "Change to Fur Clothing"
+ glp_2024_events.EVTOPTCB20:0 "Change to Cannon"
+ glp_2024_events.EVTOPTCC20:0 "Change to Tomato"
+ glp_2024_events.EVTOPTCD20:0 "Change to Champagne"
+ glp_2024_events.EVTOPTCE20:0 "Change to Llama"
+ glp_2024_events.EVTOPTCF20:0 "Change to Indigo"
+ glp_2024_events.EVTOPTCG20:0 "Change to Sea Turtles"
+ glp_2024_events.EVTOPTCH20:0 "Change to Uniforms"
+ glp_2024_events.EVTOPTCI20:0 "Change to Marble Sculpture"
+ glp_2024_events.EVTOPTCJ20:0 "Change to Cigars"
+ glp_2024_events.EVTOPTCK20:0 "Change to Chocolate"
+ glp_2024_events.EVTOPTCL20:0 "Change to Jade Sculpture"
+ glp_2024_events.EVTOPTCM20:0 "Change to Millet"
+ glp_2024_events.EVTOPTCN20:0 "Change to Exotic Fur"
+ glp_2024_events.EVTOPTCO20:0 "Change to Damestear"
+ glp_2024_events.EVTOPTCP20:0 "Change to Precursor Relics"
+ glp_2024_events.EVTOPTCQ20:0 "Change to Mithril"
+ glp_2024_events.EVTOPTCR20:0 "Change to Fungi"
+ glp_2024_events.EVTOPTCS20:0 "Change to Serpentbloom"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
@@ -784,3 +882,4 @@
  A2A_ADMIN_6_desc:0 ""
  A2A_ADMIN_7:0 "Dolls army"
  A2A_ADMIN_7_desc:0 ""
+
