Duration scry, manufactory, artifacts + great/mithycal conqueror

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -706,7 +706,18 @@
  
  glp_save_edit_events.EVTNAME71:0 "[From.GetName] Create Building"
  glp_save_edit_events.EVTDESC71:0 "Decide what kind of buildings you want in [From.GetName]"
- glp_save_edit_events.EVTBATA01:0 "Manufactory"
+ glp_save_edit_events.EVTBATA01:0 "Mills"
+ glp_save_edit_events.EVTBATAA01:0 "wharf"
+ glp_save_edit_events.EVTBATAB01:0 "weapons"
+ glp_save_edit_events.EVTBATAC01:0 "textile"
+ glp_save_edit_events.EVTBATAD01:0 "plantations"
+ glp_save_edit_events.EVTBATAE01:0 "tradecompany"
+ glp_save_edit_events.EVTBATAF01:0 "farm estate"
+ glp_save_edit_events.EVTBATAG01:0 "furnace"
+ glp_save_edit_events.EVTBATAH01:0 "ramparts"
+ glp_save_edit_events.EVTBATAI01:0 "soldier households"
+ glp_save_edit_events.EVTBATAJ01:0 "impressment offices"
+ glp_save_edit_events.EVTBATAK01:0 "state_house"
  glp_save_edit_events.EVTBATA02:0 "Remove Manufactory"
  glp_save_edit_events.EVTBATA03:0 "Temple"
  glp_save_edit_events.EVTBATA04:0 "Workshop"
@@ -882,4 +893,32 @@
  A2A_ADMIN_6_desc:0 ""
  A2A_ADMIN_7:0 "Dolls army"
  A2A_ADMIN_7_desc:0 ""
+
+ glp_2024_events.EVTNAME7:0 "Grant Artifacts"
+ glp_2024_events.EVTDESC7:0 "By your presence you may enforce the rule of the universe and grant artifacts to the province of [From.GetName].\n\n§YChoose what artifact you want to grant in [From.GetName]§!"
+ glp_2024_events.EVTOPTA7:0 "Nevermind"
+ glp_2024_events.EVTOPTB7:0 "Grant Artifacts soul hourglass"
+ glp_2024_events.EVTOPTC7:0 "Remove Artifacts soul hourglass"
+ glp_2024_events.EVTOPTD7:0 "Grant Artifacts golden blood key"
+ glp_2024_events.EVTOPTE7:0 "Remove Artifacts golden blood key"
+ glp_2024_events.EVTOPTF7:0 "Grant Artifacts pierced skull"
+ glp_2024_events.EVTOPTG7:0 "Remove Artifacts pierced skull"
+ glp_2024_events.EVTOPTH7:0 "Grant Artifacts eternal winds fan"
+ glp_2024_events.EVTOPTI7:0 "Remove Artifacts eternal winds fan"
+ glp_2024_events.EVTOPTJ7:0 "Grant Artifacts lost stone"
+ glp_2024_events.EVTOPTK7:0 "Remove Artifacts lost stone"
+ glp_2024_events.EVTOPTL7:0 "Grant Artifacts blood cauldron"
+ glp_2024_events.EVTOPTM7:0 "Remove Artifacts blood cauldron"
+ glp_2024_events.EVTOPTN7:0 "Grant Artifacts shadow panpipes"
+ glp_2024_events.EVTOPTO7:0 "Remove Artifacts shadow panpipes"
+  glp_2024_events.EVTOPTP7:0 "Grant Artifacts dragon skull"
+  glp_2024_events.EVTOPTQ7:0 "Remove Artifacts dragon skull"
+  glp_2024_events.EVTOPTR7:0 "Grant Artifacts ancient shield"
+  glp_2024_events.EVTOPTS7:0 "Remove Artifacts ancient shield"
+  glp_2024_events.EVTOPTT7:0 "Grant Artifacts cain blood"
+  glp_2024_events.EVTOPTU7:0 "Remove Artifacts cain blood"
+  glp_2024_events.EVTOPTw7:0 "Grant Artifacts vanhelsing stake"
+  glp_2024_events.EVTOPTX7:0 "Remove Artifacts vanhelsing stake"
+  glp_2024_events.EVTOPTY7:0 "Grant mythical conqueror"
+  glp_2024_events.EVTOPTZ7:0 "Grant great conqueror"
 
