Modification of order in the admin panel + correction troops

--- a/3362815204/localisation/GLP_gui_l_english.yml
+++ b/3362815204/localisation/GLP_gui_l_english.yml
@@ -1,55 +1,81 @@
 ﻿l_english:
- GLP_save_edits_button_loc:0 "Open Save Edits Menu"
- GLP_save_edits_close_button_loc:0 "Close Window"
- glp_change_religion_button_loc:0 "Change Country Religion"
- glp_save_edits_menu_header:0 "Save Edits Menu"
- glp_change_religion_loc:0 "Change Country Religion"
- glp_change_government_loc:0 "Add minorities"
- glp_spawn_troops_loc:0 "Spawn Troops"
- glp_spawn_ships_loc:0 "Spawn Ships"
- glp_change_ruler_loc:0 "Change Ruler"
- glp_give_mana_loc:0 "Add Mana £dip£ £adm£ £mil£"
- glp_military_rewards_loc:0 "Military Boost"
- glp_naval_rewards_loc:0 "Naval Boost"
- glp_general_rewards_loc:0 "Miscellaneous Boost"
- glp_spawn_general_loc:0 "Spawn General/Warwizard"
- glp_spawn_admiral_loc:0 "Spawn Admiral"
- glp_spawn_advisor_loc:0 "Spawn Advisor(The cool guys)"
- glp_change_province_religion_loc:0 "Change Province Religion"
- glp_ai_fixes_loc:0 "Big Red Admin Button"
- glp_remove_autonomy_loc:0 "Remove Autonomy(Elizabeth)"
- glp_spawn_next_isntitution_loc:0 "Spawn Next Institution(Dracula)"
- glp_donate_ducats_loc:0 "Add Treasury"
- glp_release_province_loc:0 "Release Province"
- glp_release_all_possible_provs_loc:0 "Release All Possible Provinces"
- glp_rewards_modifier_loc:0 "Modifier Rewards"
- glp_spawn_broceliande_loc:0 "Spawn Brocéliande"
- glp_change_comet_loc:0 "Change Comet Event"
- glp_spawn_npc_advisor_loc:0 "Spawn NPC Advisor"
- glp_toast_loc:0 "Announcements"
- glp_province_buildup_loc:0 "Build Up Province"
- glp_call_sejm_loc:0 "Call Sejm"
- glp_inquisition_events_loc:0 "Inquisition Events"
- glp_open_factions_window_loc:0 "Open Lan Party Factions"
- glp_enable_disable_factions_loc:0 "Enable/Disable Factions"
- glp_spawn_nations_loc:0 "Spawn Nation"
- glp_award_artifact_loc:0 "Award/Steal Artifact"
- glp_factions_alrdy_joined_side_tt:0 "§Y[Root.GetName]§! is not part of any faction."
- glp_factions_didnt_join_sides_tt:0 "§Y[Root.GetName]§! joined faction."
- glp_factions_sideA_header:0 "Elizabeth Báthory"
- glp_factions_sideB_header:0 "Vlad Draculea"
- glp_factions_join_sideA_loc:0 "Join Elizabeth Báthory Faction"
- glp_factions_join_sideB_loc:0 "Join Vlad Draculea Faction"
- glp_factions_leave_sideA_loc:0 "Leave Faction"
- glp_factions_leave_sideB_loc:0 "Leave Faction"
- glp_polish_events_spawn_loc:0 "Spawn Polish Sejm Events"
- glp_request_duel_loc:0 "Request Duel"
- glp_request_duel_sender_CD:0 "Can send §YRequest Duel§! only once every §Y5§! years"
- glp_request_duel_receiver_CD:0 "Can receive §YRequest Duel§! only once every §Y5§! years"
- glp_supress_inquisition_decision_loc:0 "Supress Inquisition Vote"
- glp_release_pope_loc:0 "Release Pope"
- glp_ignore_tech_formation_loc:0 "Add/Remove Ignore Tech Formation"
- glp_remove_ae_loc:0 "Remove Country AE"
- glp_inquisition_hater_loc:0 "Add/Remove Anti-Inquisition Representative"
- glp_change_trade_good_loc:0 "Change Province Goods"
- glp_add_estate_loyalty_loc:0 "Improve Estate Loyalty"
+
+GLP_save_edits_button_loc:0 "Open Save Edits Menu"
+GLP_save_edits_close_button_loc:0 "Close Window"
+glp_change_religion_button_loc:0 "Change Country Religion" #Error ??
+glp_save_edits_menu_header:0 "Save Edits Menu"
+
+#Global messages
+glp_toast_loc: "§YAnnouncements§!" #Need to change the contents of the messages
+
+#Province modifiers
+glp_province_buildup_loc: "Modify buildings" #Need to add the option to remove buildings
+glp_change_trade_good_loc: "Change Province Goods" #Done 97 trade goods
+glp_change_province_religion_loc: "Change Province Religion" #Done need all religions and religions filtered by groups
+glp_change_religion_loc: "Change Country Religion" #Done need all religions and religions filtered by groups
+glp_change_government_loc: "Add minorities" #Broken, need verification, To be renamed as Add/Remove Minorities
+
+#Country modifiers in Red
+glp_give_mana_loc: "§RAdd Mana§! £dip£ £adm£ £mil£" #Done maybe regroup and add more options
+glp_donate_ducats_loc: "§RAdd Treasury§!" #Done maybe add more options
+glp_ai_fixes_loc: "§RBig Red Admin Button§!" #Done need to add devastation and autonomy
+glp_general_rewards_loc: "§RMiscellaneous Boost§!" #Done
+glp_award_artifact_loc: "§RAward/Steal Artifact§!" #To be renamed as Attribute flag
+glp_rewards_modifier_loc: "§RRewards Ideas groups§!" #To be renamed as Rewards Ideas groups
+glp_change_ruler_loc: "§RModification of Ruler§! £dip£ £adm£ £mil£" #Done maybe regroup more actions into different events
+glp_spawn_advisor_loc: "§RSpawn Advisor§! £dip£ £adm£ £mil£" #Done Keeps on adding new advisors linked to the contributors of this project
+glp_add_estate_loyalty_loc: "§RImprove Estate Loyalty§!" #Done need more estates
+
+#Military modifiers in Blue
+glp_spawn_troops_loc: "§BSpawn Troops§!" #Done maybe add specials troops
+glp_spawn_ships_loc: "§BSpawn Ships§!" #Done maybe add specials ships
+glp_military_rewards_loc: "§BMilitary Boost§!" #Done
+glp_naval_rewards_loc: "§BNaval Boost§!" #Done
+glp_spawn_general_loc: "§BSpawn General/Warwizard§!" #Done
+glp_spawn_admiral_loc: "§BSpawn Admiral§!" #Done
+
+#Dangerous modifiers in Orange
+glp_release_province_loc: "§ORelease Province§!" #Nothing to change
+glp_release_all_possible_provs_loc: "§ORelease All Possible Provinces§!" #Nothing to change
+
+#Enable disable factions for events
+glp_enable_disable_factions_loc: "Enable/Disable Factions" #Nothing to change
+
+#Empty buttons ready to be changed
+glp_inquisition_hater_loc: "Add/Remove Anti-Inquisition Representative" #To be removed
+glp_remove_ae_loc: "Remove Country AE" #To be removed
+glp_ignore_tech_formation_loc: "Add/Remove Ignore Tech Formation" #To be removed
+glp_release_pope_loc: "Release Pope" #To be removed
+glp_supress_inquisition_decision_loc: "Supress Inquisition Vote" #To be removed
+glp_polish_events_spawn_loc: "Spawn Polish Sejm Events" #To be removed
+glp_remove_autonomy_loc: "Remove Autonomy(Elizabeth)" #To be removed
+glp_spawn_next_isntitution_loc: "Spawn Next Institution(Dracula)" #To be removed
+glp_spawn_npc_advisor_loc: "Spawn NPC Advisor" #To be removed
+glp_inquisition_events_loc: "Inquisition Events" #To be removed
+glp_call_sejm_loc: "Call Sejm" #To be removed
+glp_spawn_nations_loc: "Spawn Nation" #To be removed
+
+glp_change_comet_loc: "Change Comet Event" #To be removed
+glp_spawn_broceliande_loc: "Spawn Brocéliande" #To be removed
+ 
+glp_open_factions_window_loc:0 "Open Lan Party Factions"
+  
+glp_factions_alrdy_joined_side_tt:0 "§Y[Root.GetName]§! is not part of any faction."
+glp_factions_didnt_join_sides_tt:0 "§Y[Root.GetName]§! joined faction."
+glp_factions_sideA_header:0 "Skygroot Mendel"
+glp_factions_sideB_header:0 "Coussin Mendel"
+glp_factions_join_sideA_loc:0 "Join Skygroot Mendel Faction"
+glp_factions_join_sideB_loc:0 "Join Coussin Mendel Faction"
+glp_factions_leave_sideA_loc:0 "Leave Faction"
+glp_factions_leave_sideB_loc:0 "Leave Faction"
+ 
+glp_request_duel_loc:0 "Request Duel"
+glp_request_duel_sender_CD:0 "Can send §YRequest Duel§! only once every §Y5§! years"
+glp_request_duel_receiver_CD:0 "Can receive §YRequest Duel§! only once every §Y5§! years"
+ 
+ 
+ 
+ 
+
+ 
+ 
