--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -325,7 +325,7 @@
  glp_save_edit_events.EVTOPTA22:0 "Splendid!"
  glp_new_advisor_tt:0 "§YReceived new Advisors from The Infernal Troll Game Masters!§!"
  
- glp_save_edit_events.EVTNAME23:0 "AI Nation fixes for [From.Owner.GetName]"
+ glp_save_edit_events.EVTNAME23:0 "BIG RED ADMIN BUTTON for the country [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC23:0 "Decide what kind of nation fixes to do for [From.Owner.GetName]."
  glp_save_edit_events.EVTFIXINGZZ1:0 "Nevermind"
  glp_save_edit_events.EVTFIXINGA01:0 "Clear War Exhaustion"
@@ -706,18 +706,18 @@
  
  glp_save_edit_events.EVTNAME71:0 "[From.GetName] Create Building"
  glp_save_edit_events.EVTDESC71:0 "Decide what kind of buildings you want in [From.GetName]"
- glp_save_edit_events.EVTBATA01:0 "Mills"
- glp_save_edit_events.EVTBATAA01:0 "wharf"
- glp_save_edit_events.EVTBATAB01:0 "weapons"
- glp_save_edit_events.EVTBATAC01:0 "textile"
- glp_save_edit_events.EVTBATAD01:0 "plantations"
- glp_save_edit_events.EVTBATAE01:0 "tradecompany"
- glp_save_edit_events.EVTBATAF01:0 "farm estate"
- glp_save_edit_events.EVTBATAG01:0 "furnace"
- glp_save_edit_events.EVTBATAH01:0 "ramparts"
- glp_save_edit_events.EVTBATAI01:0 "soldier households"
- glp_save_edit_events.EVTBATAJ01:0 "impressment offices"
- glp_save_edit_events.EVTBATAK01:0 "state_house"
+ glp_save_edit_events.EVTBATA01:0 "Mill"
+ glp_save_edit_events.EVTBATAA01:0 "Wharf"
+ glp_save_edit_events.EVTBATAB01:0 "Weapons Manufactory"
+ glp_save_edit_events.EVTBATAC01:0 "Textile Manufactory"
+ glp_save_edit_events.EVTBATAD01:0 "Plantations"
+ glp_save_edit_events.EVTBATAE01:0 "Trade company"
+ glp_save_edit_events.EVTBATAF01:0 "Farm estate"
+ glp_save_edit_events.EVTBATAG01:0 "Furnace"
+ glp_save_edit_events.EVTBATAH01:0 "Ramparts"
+ glp_save_edit_events.EVTBATAI01:0 "Soldier households"
+ glp_save_edit_events.EVTBATAJ01:0 "Impressment offices"
+ glp_save_edit_events.EVTBATAK01:0 "State house"
  glp_save_edit_events.EVTBATA02:0 "Remove Manufactory"
  glp_save_edit_events.EVTBATA03:0 "Temple"
  glp_save_edit_events.EVTBATA04:0 "Workshop"
