Nuke option & rework BuildupTool & MJ Dev button

--- a/3362815204/localisation/GLP_gui_l_english.yml
+++ b/3362815204/localisation/GLP_gui_l_english.yml
@@ -9,24 +9,24 @@ glp_save_edits_menu_header:0 "Save Edits Menu"
 glp_toast_loc: "§YAnnouncements§!" #Need to change the contents of the messages
 
 #Province modifiers
-glp_province_buildup_loc: "Modify buildings" #Need to add the option to remove buildings
-glp_change_trade_good_loc: "Change Province Goods" #Done 97 trade goods
+glp_province_buildup_loc: "§PModify buildings§!" #Need to add the option to remove buildings
+glp_change_trade_good_loc: "§PChange Province Goods§!" #Done 97 trade goods
 glp_change_province_religion_loc: "Change Province Religion" #Done need all religions and religions filtered by groups
 glp_change_religion_loc: "Change Country Religion" #Done need all religions and religions filtered by groups
-glp_change_government_loc: "Add minorities" #Broken, need verification, To be renamed as Add/Remove Minorities
+glp_change_government_loc: "§PAdd minorities§!" #Broken, need verification, To be renamed as Add/Remove Minorities
 
-#Country modifiers in Red
-glp_give_mana_loc: "§RAdd Mana§! £dip£ £adm£ £mil£" #Done maybe regroup and add more options
-glp_donate_ducats_loc: "§RAdd Treasury§!" #Done maybe add more options
+#Country modifiers
+glp_give_mana_loc: "§GAdd Mana§! £dip£ £adm£ £mil£" #Done maybe regroup and add more options
+glp_donate_ducats_loc: "§GAdd Treasury§!" #Done maybe add more options
 glp_ai_fixes_loc: "§RBig Red Admin Button§!" #Done need to add devastation and autonomy
-glp_general_rewards_loc: "§RMiscellaneous Boost§!" #Done
-glp_award_artifact_loc: "§RAward/Steal Artifact§!" #To be renamed as Attribute flag
-glp_rewards_modifier_loc: "§RRewards Ideas groups§!" #To be renamed as Rewards Ideas groups
-glp_change_ruler_loc: "§RModification of Ruler§! £dip£ £adm£ £mil£" #Done maybe regroup more actions into different events
-glp_spawn_advisor_loc: "§RSpawn Advisor§! £dip£ £adm£ £mil£" #Done Keeps on adding new advisors linked to the contributors of this project
-glp_add_estate_loyalty_loc: "§RImprove Estate Loyalty§!" #Done need more estates
+glp_general_rewards_loc: "§GMiscellaneous Boost§!" #Done
+glp_award_artifact_loc: "§GAward/Steal Artifact§!" #To be renamed as Attribute flag
+glp_rewards_modifier_loc: "§GRewards Ideas groups§!" #To be renamed as Rewards Ideas groups
+glp_change_ruler_loc: "§OModification of Ruler§! £dip£ £adm£ £mil£" #Done maybe regroup more actions into different events
+glp_spawn_advisor_loc: "§OSpawn Advisor§! £dip£ £adm£ £mil£" #Done Keeps on adding new advisors linked to the contributors of this project
+glp_add_estate_loyalty_loc: "§OImprove Estate Loyalty§!" #Done need more estates
 
-#Military modifiers in Blue
+#Military modifiers
 glp_spawn_troops_loc: "§BSpawn Troops§!" #Done maybe add specials troops
 glp_spawn_ships_loc: "§BSpawn Ships§!" #Done maybe add specials ships
 glp_military_rewards_loc: "§BMilitary Boost§!" #Done
@@ -34,15 +34,17 @@ glp_naval_rewards_loc: "§BNaval Boost§!" #Done
 glp_spawn_general_loc: "§BSpawn General/Warwizard§!" #Done
 glp_spawn_admiral_loc: "§BSpawn Admiral§!" #Done
 
-#Dangerous modifiers in Orange
-glp_release_province_loc: "§ORelease Province§!" #Nothing to change
-glp_release_all_possible_provs_loc: "§ORelease All Possible Provinces§!" #Nothing to change
+#Dangerous modifiers
+glp_release_province_loc: "§YRelease Province§!" #Nothing to change
+glp_release_all_possible_provs_loc: "§YRelease All Possible Provinces§!" #Nothing to change
 
 #Enable disable factions for events
 glp_enable_disable_factions_loc: "Enable/Disable Factions" #Nothing to change
 
+#New buttons
+glp_change_dev_in_province_loc: "§GModification of dev§!" 
+
 #Empty buttons ready to be changed
-glp_inquisition_hater_loc: "Add/Remove Anti-Inquisition Representative" #To be removed
 glp_remove_ae_loc: "Remove Country AE" #To be removed
 glp_ignore_tech_formation_loc: "Add/Remove Ignore Tech Formation" #To be removed
 glp_release_pope_loc: "Release Pope" #To be removed
