--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -340,7 +340,26 @@
  glp_save_edit_events.EVTFIXINGA10:0 "Remove AE opinion with players"
  glp_save_edit_events.EVTFIXINGA11:0 "Add 100 AE opinion with players"
  glp_save_edit_events.EVTFIXINGA12:0 "Remove AE opinion with AI"
- glp_save_edit_events.EVTFIXINGA13:0 "Add 100 AE opinion with AI"  
+ glp_save_edit_events.EVTFIXINGA13:0 "Add 100 AE opinion with AI" 
+
+
+ #glp_save_edit_events.EVTFIXINGNUKEWARNING:0 "Send them a death threat"
+ #MJ_nuke_threat_tt:0 "§RWith this, they will think twice before doing something stupid§!"
+ glp_save_edit_events.EVTFIXINGNUKE:0 "Nuke this f*cking province"
+ MJ_nuke_tt:0 "§RYou choose violence to punish foolish behavior. This action will raze to the ground this province.§!"
+ glp_save_edit_events_NUKE.EVTNAME1:0 "The last reflection"
+ glp_save_edit_events_NUKE.EVTDESC1:0 "Pushing this button, sure, is a heavy burden. But if this is what you choose, here are the consequences, written on a paper just above the button: \n\n§RThe province of [MJ_nuke.GetName] will return to 3 Dev.§! \n§RThe province of [MJ_nuke.GetName] will lost all his buildings.§! \n§RIt will kill all troops on this tile§!"
+ glp_save_edit_events_NUKE.EVTOPTZZ1:0 "Nevermind"
+ glp_save_edit_events_NUKE.EVTOPTA01:0 "You know what? Just send a warning message."
+ glp_save_edit_events_NUKE.EVTOPTA02:0 "§RDO IT!§!"
+ glp_save_edit_events_NUKEWARNING.EVTNAME1:0 "§RA really bad news!§!"
+ glp_save_edit_events_NUKEWARNING.EVTDESC1:0 "My [Root.Monarch.GetTitle]! The Infernal Troll Game Masters have sent us a really concerning message: \n\nWe, the benevolent Gods amongst man have choosen not to raze the city of [MJ_nuke.GetName]. But be warned, the next time, we won't be so leinent. Here are the list of what will happens if you dare misbehave: \n\n \n\n§RThe province of [MJ_nuke.GetName] will return to 3 Dev.§! \n§RThe province of [MJ_nuke.GetName] will lost all his buildings.§! \n§RIt will kill all troops on this tile§!\n\nWhat can we possibly do against this kind of threat my [Root.Monarch.GetTitle]?"
+ glp_save_edit_events_NUKEWARNING.EVTOPTA01:0 "Ashen Skies ?! I must report this threat to the world !"
+ glp_save_edit_events_NUKEWARNING.EVTOPTA02:0 "Bah! Empty threats. I will not be scared by this."
+ glp_save_edit_events_NUKEWARNING.EVTOPTA03:0 "... Say nothing ..."
+ glp_save_edit_events_NUKEEXPLODED.EVTNAME1:0 "§RBOOOOOOOOOOOOOOOOOOOOOOOOOOOM!§!"
+ glp_save_edit_events_NUKEEXPLODED.EVTDESC1:0 "Without any warning, a gigantic explosion can be heard accross the whole country. You have never seen that in your entire life. The people, the army, buildings, everything is gone. The province of [MJ_nuke.GetName] has been razed to the ground."
+ glp_save_edit_events_NUKEEXPLODED.EVTOPTA01:0 "NOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO!"
  glp_GM_nation_buffs:0 "GM Nation"
  
  glp_save_edit_events.EVTNAME24:0 "Change religion in the province of [From.GetName]"
@@ -706,57 +725,131 @@
  
  glp_save_edit_events.EVTNAME71:0 "[From.GetName] Create Building"
  glp_save_edit_events.EVTDESC71:0 "Decide what kind of buildings you want in [From.GetName]"
- glp_save_edit_events.EVTBATA01:0 "Mill"
- glp_save_edit_events.EVTBATAA01:0 "Wharf"
- glp_save_edit_events.EVTBATAB01:0 "Weapons Manufactory"
- glp_save_edit_events.EVTBATAC01:0 "Textile Manufactory"
- glp_save_edit_events.EVTBATAD01:0 "Plantations"
- glp_save_edit_events.EVTBATAE01:0 "Trade company"
- glp_save_edit_events.EVTBATAF01:0 "Farm estate"
- glp_save_edit_events.EVTBATAG01:0 "Furnace"
- glp_save_edit_events.EVTBATAH01:0 "Ramparts"
- glp_save_edit_events.EVTBATAI01:0 "Soldier households"
- glp_save_edit_events.EVTBATAJ01:0 "Impressment offices"
- glp_save_edit_events.EVTBATAK01:0 "State house"
- glp_save_edit_events.EVTBATA02:0 "Remove Manufactory"
- glp_save_edit_events.EVTBATA03:0 "Temple"
- glp_save_edit_events.EVTBATA04:0 "Workshop"
- glp_save_edit_events.EVTBATA05:0 "Cathedral"
- glp_save_edit_events.EVTBATA06:0 "Counting house"
- glp_save_edit_events.EVTBATA07:0 "Barracks"
- glp_save_edit_events.EVTBATA08:0 "Regimental Camp"
- glp_save_edit_events.EVTBATA09:0 "Conscription Center"
- glp_save_edit_events.EVTBATA10:0 "Training Fields"
- glp_save_edit_events.EVTBATA11:0 "Remove tax Building"
- glp_save_edit_events.EVTBATA12:0 "Remove prod Building"
- glp_save_edit_events.EVTBATA13:0 "Remove manpower Building"
- glp_save_edit_events.EVTBATA14:0 "Remove FL Building"
- glp_save_edit_events.EVTBATA15:0 "ADD/upgrade road"
- glp_save_edit_events.EVTBATA16:0 "Mage Tower"
- glp_save_edit_events.EVTBATA17:0 "Remove Mage Tower"
- glp_save_edit_events.EVTBATA18:0 "Add magic fort"
- glp_save_edit_events.EVTBATA19:0 "Remove magic fort"
- glp_save_edit_events.EVTBATA20:0 "Fort t2"
- glp_save_edit_events.EVTBATA21:0 "Fort t4"
- glp_save_edit_events.EVTBATA22:0 "Fort t6"
- glp_save_edit_events.EVTBATA23:0 "Fort t8"
- glp_save_edit_events.EVTBATA24:0 "Remove fort"
- glp_save_edit_events.EVTBATA25:0 "Market place"
- glp_save_edit_events.EVTBATA26:0 "Trade depot"
- glp_save_edit_events.EVTBATA27:0 "Stock Exchange "
- glp_save_edit_events.EVTBATA28:0 "Remove Trade buildings"
- glp_save_edit_events.EVTBATA29:0 "Courthouse"
- glp_save_edit_events.EVTBATA30:0 "Town Hall"
- glp_save_edit_events.EVTBATA31:0 "Remove admin buildings"
- glp_save_edit_events.EVTBATA32:0 "University"
- glp_save_edit_events.EVTBATA33:0 "Remove University"
- glp_save_edit_events.EVTBATA34:0 "Shipyard"
- glp_save_edit_events.EVTBATA35:0 "Grand Shipyard"
- glp_save_edit_events.EVTBATA36:0 "Remove Navy FL"
- glp_save_edit_events.EVTBATA37:0 "Dock"
- glp_save_edit_events.EVTBATA38:0 "Dry Dock"
- glp_save_edit_events.EVTBATA39:0 "Remove Sailor buildings"
  glp_save_edit_events.EVTBATZZ1:0 "Nevermind"
+
+ glp_save_edit_events.EVTBATA01:0 "Create Economic building in [From.GetName]"
+ glp_save_edit_events.EVTNAME72:0 "Economic building §Gcreation§! menu"
+ glp_save_edit_events.EVTDESC72:0 "Please choose what building you want to create in [glp_builder_nation.GetName]."
+ glp_save_edit_events.BUILDINGZZ1:0 "Nevermind"
+ glp_save_edit_events.BUILDINGA01:0 "Build a Temple in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA02:0 "Build a Cathedral in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA03:0 "Build a Workshop in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA04:0 "Build a Counting House in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA05:0 "Build a Marketplace in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA06:0 "Build a Trade depot in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA07:0 "Build a Stock Exchange in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA08:0 "Build a Courthouse in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA09:0 "Build a Town Hall in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA10:0 "Build a University in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA11:0 "Build a Dirt road in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA12:0 "Build a Gravel road in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA13:0 "Build a Cobbelstone road in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA14:0 "Build a Dwarven road in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA15:0 "Build a Railroad in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA16:0 "Build a Mage tower in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA17:0 "Build a Farm Estate in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA18:0 "Build a Textile manufactory in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA19:0 "Build a Plantation in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA20:0 "Build a Mill in [glp_builder_nation.GetName]" 
+ glp_save_edit_events.BUILDINGA21:0 "Build a Furnace in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA22:0 "Build a Wharf in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA23:0 "Build a Trade Company in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA24:0 "Build a Weapons manufactory in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA25:0 "Build a State house in [glp_builder_nation.GetName]"
+  
+ glp_save_edit_events.EVTBATA02:0 "Create Military building in [From.GetName]"
+ glp_save_edit_events.EVTNAME73:0 "Military building §Gcreation§! menu"
+ glp_save_edit_events.EVTDESC73:0 "Please choose what building you want to create in [glp_builder_nation.GetName]."
+ glp_save_edit_events.BUILDINGZZ2:0 "Nevermind"
+ glp_save_edit_events.BUILDINGA26:0 "Build a Barrack in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA27:0 "Build a Training field in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA28:0 "Build a Regimental Camp in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA29:0 "Build a Conscription Center in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA30:0 "Build a Dock in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA31:0 "Build a Drydock in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA32:0 "Build a Shipyard in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA33:0 "Build a Grand shipyard in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA34:0 "Build a Costal Defense in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA35:0 "Build a Naval Battery in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA36:0 "Build a Soldier's household in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA37:0 "Build a Rampart in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA38:0 "Build a Impressment office in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA39:0 "Build a Magic fortress in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA40:0 "Build a Castle in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA41:0 "Build a Bastion in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA42:0 "Build a Star fort in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA43:0 "Build a Fortress in [glp_builder_nation.GetName]"
+
+ glp_save_edit_events.EVTBATA03:0 "Destroy Economic building in [From.GetName]"
+ glp_save_edit_events.EVTNAME74:0 "Economic building §Rdestruction§! menu"
+ glp_save_edit_events.EVTDESC74:0 "Please choose what building you want to destroy in [glp_builder_nation.GetName]."
+ glp_save_edit_events.BUILDINGZZ3:0 "Nevermind"
+ glp_save_edit_events.BUILDINGA44:0 "Destroy the Temple in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA45:0 "Destroy the Cathedral in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA46:0 "Destroy the Workshop in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA47:0 "Destroy the Counting House in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA48:0 "Destroy the Marketplace in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA49:0 "Destroy the Trade depot in [glp_builder_nation.GetName]"  
+ glp_save_edit_events.BUILDINGA50:0 "Destroy the Stock Exchange in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA51:0 "Destroy the Courthouse in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA52:0 "Destroy the Town Hall in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA53:0 "Destroy the University in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA54:0 "Destroy the Dirt road in [glp_builder_nation.GetName]"  
+ glp_save_edit_events.BUILDINGA55:0 "Destroy the Gravel road in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA56:0 "Destroy the Cobbelstone road in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA57:0 "Destroy the Dwarven road in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA58:0 "Destroy the Railroad in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA59:0 "Destroy the Mage tower in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA60:0 "Destroy the Farm Estate in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA61:0 "Destroy the Textile manufactory in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA62:0 "Destroy the Plantation in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA63:0 "Destroy the Mill in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA64:0 "Destroy the Furnace in [glp_builder_nation.GetName]"  
+ glp_save_edit_events.BUILDINGA65:0 "Destroy the Wharf in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA66:0 "Destroy the Trade Company in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA67:0 "Destroy the Weapons manufactory in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA68:0 "Destroy the State house in [glp_builder_nation.GetName]"
+
+ glp_save_edit_events.EVTBATA04:0 "Destroy Military building in [From.GetName]"
+ glp_save_edit_events.EVTNAME75:0 "Military building §Rdestruction§! menu"
+ glp_save_edit_events.EVTDESC75:0 "Please choose what building you want to destroy in [glp_builder_nation.GetName]."
+ glp_save_edit_events.BUILDINGZZ4:0 "Nevermind"
+ glp_save_edit_events.BUILDINGA69:0 "Destroy the Barrack in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA70:0 "Destroy the Training field in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA71:0 "Destroy the Regimental Camp in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA72:0 "Destroy the Conscription Center in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA73:0 "Destroy the Dock in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA74:0 "Destroy the Drydock in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA75:0 "Destroy the Shipyard in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA76:0 "Destroy the Grand shipyard in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA77:0 "Destroy the Costal Defense in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA78:0 "Destroy the Naval Battery in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA79:0 "Destroy the Soldier's household in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA80:0 "Destroy the Rampart in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA81:0 "Destroy the Impressment office in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA82:0 "Destroy the Magic fortress in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA83:0 "Destroy the Castle in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA84:0 "Destroy the Bastion in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA85:0 "Destroy the Star fort in [glp_builder_nation.GetName]"
+ glp_save_edit_events.BUILDINGA86:0 "Destroy the Fortress in [glp_builder_nation.GetName]" 
+
+ glp_save_edit_events.EVTBATA05:0 "Destroy every building in [From.GetName]"
+
+ glp_save_edit_events.EVTNAME76:0 "Changing developpement in province [From.GetName]"
+ glp_save_edit_events.EVTDESC76:0 "Choose what type of developpement you want to change in [From.GetName].\n\n§YYou have the power to make thie province richer or poorer§!"
+ glp_save_edit_events.EVTDEVOPTZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTDEVOPTA01:0 "Add 1 Tax Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA02:0 "Add 1 Prod Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA03:0 "Add 1 Manpower Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA04:0 "Add 10 Tax Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA05:0 "Add 10 Prod Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA06:0 "Add 10 Manpower Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA07:0 "Remove 1 Tax Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA08:0 "Remove 1 Prod Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA09:0 "Remove 1 Manpower Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA10:0 "Remove 10 Tax Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA11:0 "Remove 10 Prod Developpement to [From.GetName]"
+ glp_save_edit_events.EVTDEVOPTA12:0 "Remove 10 Manpower Developpement to [From.GetName]"
 
  glp_2024_events.EVTNAME20:0 "Changing trade goods"
  glp_2024_events.EVTDESC20:0 "By your presence you may enforce the rule of the universe and change what is produced in the province of [From.GetName].\n\n§YChoose what trade good you want to produce in [From.GetName]§!"
